[package]
name = "bevy_render_macros"
version = "0.8.0-dev"
description = "Bevy Render Macros"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
bevy_macro_utils = { path = "../../bevy_macro_utils", version = "0.8.0-dev" }

syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
